# ARPL-Internship-Trial-Task

./: README.md  monitor.cpp  monitor.yaml  monitor_ros2.cpp  text.txt
monitor_cpp/: CMakeLists.txt  package.ros1.xml  package.ros2.xml  package.xml
monitor_cpp/config/: monitor.yaml  monitor_ros2.yaml
monitor_cpp/launch/: monitor_cpp.launch  monitor_ros1.launch  monitor_ros2_launch.xml
monitor_cpp/src/: monitor_cpp_node.cpp  monitor_ros1_node.cpp  monitor_ros2_node.cpp  ros_compat.cpp  ros_compat.h
